Fix overflow issue on mobile product detail page

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -19,7 +19,7 @@
     column-gap: 40px
 
   @media screen and (max-width: $break-medium)
-    grid-template-columns: 1fr
+    grid-template-columns: minmax(0, 1fr)
 
 .reset-selection-button-container
   text-align: center
